fixed text alignment

--- a/index.css
+++ b/index.css
@@ -102,6 +102,7 @@ body {
    border: none;
    cursor: pointer;
    font-family: 'Copperplate Gothic Light';
+   min-width: 300px;
  }
  
  /* Dropdown button on hover & focus */
@@ -127,7 +128,7 @@ body {
  /* Links inside the dropdown */
  .dropdown-content a {
    color: white;
-   padding: 12px 16px;
+   padding-top: 12px;
    text-decoration: none;
    display: block;
 
